--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    
     <% if current_user %>
       Logged in as <%= current_user.email %>.
       <%= link_to "Log Out", logout_path %>
@@ -16,7 +17,10 @@
       <%= link_to "Sign Up", signup_path %> or
       <%= link_to "Log In", login_path %>
     <% end %>
+
+    <div style="text-align:center">
+      <%= yield %>
+    </div>
     
-    <%= yield %>
   </body>
 </html>
